<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_text"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="lottie/progress.json"
        app:lottie_loop="true"
        tools:visibility="gone"/>

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:foreground="@drawable/gradient"
                android:scaleType="centerCrop"
                android:src="@drawable/test_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ratingContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/poster"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:id="@+id/imdbContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_imdb_logo_2016" />

                    <TextView
                        android:id="@+id/imdbRating"
                        style="@style/TextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:textSize="16sp"
                        tools:text="8.3" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/kpContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@id/imdbContainer"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_kinopoisk"
                        app:tint="@color/brandy_punch" />

                    <TextView
                        android:id="@+id/kpRating"
                        style="@style/TextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:textSize="16sp"
                        tools:text="8.3" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/trailerButton"
                style="@style/TrailerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailer"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:iconTint="@color/white"
                app:icon="@drawable/ic_play_trailer"/>

            <LinearLayout
                android:id="@+id/info"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/poster">

                <TextView
                    android:id="@+id/title"
                    style="@style/DetailTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    tools:text="Long name, very long name" />

                <TextView
                    android:id="@+id/originTitle"
                    style="@style/TextCaption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    tools:text="Original title" />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:layout_marginTop="8dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/director"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/actors"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/actors"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="20sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>